Keep your .config clean with external config files. Add concept <connectionStrings configSource="ConnectionStrings.config"/>
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40132

--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -55,7 +55,22 @@
       </runtimeServiceGroup>
     </runtimeServiceGroups>
   </vanriseRuntime>
-
+  
+  <vanriseLogging maxLogLevel="Information">
+    <loggers>
+      <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
+        <parameters>
+          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+        </parameters>
+      </logger>
+      <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
+    </loggers>
+    <exceptionLoggers>
+      <exceptionLogger name="ConsoleExceptionLogger"  type="Vanrise.Common.ConsoleExceptionLogger, Vanrise.Common"></exceptionLogger>
+      <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
+    </exceptionLoggers>
+  </vanriseLogging>
+  
   <!--<connectionStrings>
     <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
@@ -77,8 +92,8 @@
     <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Initial Catalog=Retail.Ringo_Online_Transaction;User ID=Application_Online_User; Password=Application_Online_User" />
     <add name="MainDBConnString" connectionString=""/>
   </connectionStrings>-->
-  <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" />
+  <connectionStrings configSource="ConnectionStrings.config"/>
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" />
     <add name="RetailDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
     <add name="VR_AccountBalance_TransactionDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
     <add name="MainDBConnString" connectionString="" />
@@ -88,55 +103,42 @@
     <add name="NumberingPlanDBConnString" connectionString="Server=192.168.110.185;User ID=development;Password=dev!123;Database=Retail_Dev;"/>
     <add name="RetailCDRDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
-
-  </connectionStrings>
+  </connectionStrings>-->
   <appSettings>
-    <add key="Retail_BE_DBConnStringKey" value="RetailDBConnString" />
-    <add key="TOneWhS_BE_DBConnStringKey" value="RetailDBConnString"/>
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString" />
-    <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueItemDBConnStringKey" value="QueueItemDBConnString"/>
-    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
-    <add key="VR_AccountBalance_TransactionDBConnStringKey" value="RetailDBConnString"/>
-    <add key="VRNotificationTransactionDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="RulesDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="false"/>
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="NumberingPlanDBConnStringKey" value="RetailDBConnString"/>
-    <add key="SummaryTransformationDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="InvoiceDBConnStringKey" value="ConfigurationDBConnString"/>
-  </appSettings>
+    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
 
-  <vanriseLogging maxLogLevel="Information">
-    <loggers>
-      <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
-        <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
-        </parameters>
-      </logger>
-      <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
-    </loggers>
-    <exceptionLoggers>
-      <exceptionLogger name="ConsoleExceptionLogger"  type="Vanrise.Common.ConsoleExceptionLogger, Vanrise.Common"></exceptionLogger>
-      <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
-    </exceptionLoggers>
-  </vanriseLogging>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString" />
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+    <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="VRNotificationTransactionDBConnStringKey"         value="TransactionDBConnString"/>
+    <add key="SummaryTransformationDBConnStringKey"             value="TransactionDBConnString"/>
+
+    <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
+    
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString"/>
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString" />
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString" />
+    <add key="BusinessProcessConfigDBConnStringKey"             value="ConfigurationDBConnString" />
+    <add key="VR_AccountBalance_TransactionDBConnStringKey"     value="RetailDBConnString"/>
+    <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="QueueingConfigDBConnStringKey"                    value="ConfigurationDBConnString"/>
+    <add key="InvoiceDBConnStringKey"                           value="ConfigurationDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+
+    <add key="Retail_BE_DBConnStringKey"                        value="RetailDBConnString" />
+    <add key="NumberingPlanDBConnStringKey"                     value="RetailDBConnString"/>
+
+    <add key="RetailCDRDBConnStringKey"                         value="RetailCDRDBConnString"/>
+    <add key="Retail_Analytics_DBConnStringKey"                 value="RetailAnalyticsDBConnString"/>
+
+    <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
+  </appSettings>  
 </configuration>
