--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -22,8 +22,8 @@
     </exceptionLoggers>
   </vanriseLogging>
 
-  <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Configuration;User ID=development;Password=dev!123;" />
+  <connectionStrings configSource="ConnectionStrings.config"/>
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Configuration;User ID=development;Password=dev!123;" />
     <add name="RetailDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Retail_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
 
     <add name="VR_AccountBalance_TransactionDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Retail_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
@@ -37,63 +37,56 @@
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
 
     <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
-
-    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=Retail_Online;User ID=Application_Online_User;Password=Application_Online_User;" />
-    <add name="RetailDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Database=Retail_Online;User ID=Application_Online_User;Password=Application_Online_User;" />
-
-    <add name="VR_AccountBalance_TransactionDBConnString" connectionString="Data Source=192.168.110.185;Database=Retail_Online;User ID=Application_Online_User;Password=Application_Online_User;" />
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;User ID=Application_Online_User;Password=Application_Online_User;Database=Retail_Online;"/>
-    <add name="LogDBConnString" connectionString="Initial Catalog=Retail_Online_Logging;Data Source=192.168.110.185\MSSQL2014;User ID=Application_Online_User; Password=Application_Online_User" />
-    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Initial Catalog=Retail_Online_Transaction;User ID=Application_Online_User; Password=Application_Online_User" />
-    <add name="QueueItemDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Initial Catalog=Retail_Online_Queueing;User ID=Application_Online_User; Password=Application_Online_User" />
-    <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=Retail_Online_EDR;User ID=Application_Online_User;Password=Application_Online_User"/>-->
-
-  </connectionStrings>
+  </connectionStrings>-->
 
   <appSettings>
-    <add key="Web_ExtendedModulesNames" value="Retail_Ringo,Retail_Zajil,Retail_Teles"/>
-    <!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
+    <add key="Web_ExtendedModulesNames" value="Retail_Ringo,Retail_Zajil,Retail_Teles"/><!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
+    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
+    <add key="TempPasswordValidity" value="24:00:00"/>
+    
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
-    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
 
-    <add key="Retail_BE_DBConnStringKey" value="RetailDBConnString" />
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString" />
-    <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueItemDBConnStringKey" value="QueueItemDBConnString"/>
-    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString"/>
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+    <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
 
-    <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
-    <add key="RulesDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="TOneWhS_BE_DBConnStringKey" value="RetailDBConnString"/>
-    <add key="VR_AccountBalance_TransactionDBConnStringKey" value="VR_AccountBalance_TransactionDBConnString"/>
+    <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
 
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="NumberingPlanDBConnStringKey" value="NumberingPlanDBConnString"/>
-    <add key="RetailCDRDBConnStringKey" value="RetailCDRDBConnString"/>
-    <add key="Retail_Analytics_DBConnStringKey" value="RetailAnalyticsDBConnString"/>
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString" />
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="BusinessProcessConfigDBConnStringKey"             value="ConfigurationDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="QueueingConfigDBConnStringKey"                    value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
+    <add key="InvoiceDBConnStringKey"                           value="ConfigurationDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+
+    <add key="VR_AccountBalance_TransactionDBConnStringKey"     value="VR_AccountBalance_TransactionDBConnString"/>
+    <add key="NumberingPlanDBConnStringKey"                     value="NumberingPlanDBConnString"/>
+
+    <add key="Retail_BE_DBConnStringKey"                        value="RetailDBConnString"/>
+
+    <add key="RetailCDRDBConnStringKey"                         value="RetailCDRDBConnString"/>
+    <add key="Retail_Analytics_DBConnStringKey"                 value="RetailAnalyticsDBConnString"/>
 
     <add key="ImportCodePreparationTemplatePath" value="/Client/Modules/VR_NumberingPlan/Template/Code preperation sample.xls"/>
     <add key="DownloadVRCodeGroupTemplatePath" value="/Client/Modules/VR_NumberingPlan/Template/CodeGroupTemplate.xlsx"/>
 
-    <add key="LoggingDBConnStringKey" value="LogDBConnString"/>
-    <add key="InvoiceDBConnStringKey" value="ConfigurationDBConnString"/>
-
     <add key="MNPReportPath" value="/Client/Modules/Retail_Ringo/Reports/MNP Report.xls"/>
 
-    <add key="LoggingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
   </appSettings>
 
   <system.web>
