--- a/Vanrise/Code/Vanrise.Runtime.Business/Vanrise.Runtime.Business.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Business/Vanrise.Runtime.Business.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultTaskActionExtentedSettings.cs" />
     <Compile Include="Filter\UserTaskFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserSchedulerServiceViewSettings.cs" />
+    <Compile Include="SchedulerServiceViewSettings.cs" />
+    <Compile Include="SchedulerTaskActionTypeConfigureFilter.cs" />
+    <Compile Include="SchedulerTaskActionTypeManager.cs" />
     <Compile Include="SchedulerTaskStateManager.cs" />
     <Compile Include="SchedulerTaskManager.cs" />
   </ItemGroup>
