--- a/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
@@ -51,6 +51,7 @@
     <Compile Include="InterRuntimeServiceRequest.cs" />
     <Compile Include="RuntimeFactory.cs" />
     <Compile Include="RuntimeServiceInstance.cs" />
+    <Compile Include="SchedulerTaskActionTypeFilter.cs" />
     <Compile Include="TransactionLockingDetails.cs" />
     <Compile Include="TransactionLockItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +79,10 @@
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Security.Entities\Vanrise.Security.Entities.csproj">
+      <Project>{04de17c7-70b4-40a1-84dd-26c91ca228ac}</Project>
+      <Name>Vanrise.Security.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
