--- a/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
@@ -110,6 +110,7 @@
     <Content Include="Runtime\Directives\SchedulerTask\vr-runtime-schedulertask-grid.js" />
     <Content Include="Runtime\Directives\TaskAction\Templates\TaskActionScheduleDailyRepricing.html" />
     <Content Include="Runtime\Directives\TaskAction\Templates\TaskActionWorkFlow.html" />
+    <Content Include="Runtime\Directives\TaskAction\vr-runtime-taskactiontype-selector.js" />
     <Content Include="Runtime\Directives\TaskAction\vr-runtime-taskaction-scheduledailyrepricing.js" />
     <Content Include="Runtime\Directives\TaskAction\vr-runtime-bpdefinition-selector.js" />
     <Content Include="Runtime\Directives\TaskAction\vr-runtime-taskaction-workflow.js" />
@@ -142,6 +143,10 @@
     <Content Include="Runtime\Views\WFScheduleTemplates\ScheduleDailyRepricingProcessTemplateController.js" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
