Added Action Definitions classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40141

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.MainExtensions/TOne.WhS.AccountBalance.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.MainExtensions/TOne.WhS.AccountBalance.MainExtensions.csproj
@@ -84,7 +84,9 @@
     <Compile Include="FinancialAccountTypes\SupplierPrepaid\SupplierPrepaidDefinitionSettings.cs" />
     <Compile Include="QueueActivators\UpdateWhSBalancesQueueActivator.cs" />
     <Compile Include="VRBalanceAlertActions\BlockCustomerBalAlertAction.cs" />
+    <Compile Include="VRBalanceAlertActions\BlockCustomerBalAlertActionDefinitionSettings.cs" />
     <Compile Include="VRBalanceAlertActions\SendCustomerEmailBalAlertAction.cs" />
+    <Compile Include="VRBalanceAlertActions\SendCustomerEmailBalAlertActionDefinitionSettings.cs" />
     <Compile Include="VRBalanceAlertThresholds\CustFixedBalAlertThreshold.cs" />
     <Compile Include="VRBalanceAlertThresholds\CustTolerancePercBalAlertThreshold.cs" />
     <Compile Include="VRBalanceAlertThresholds\SuppTolerancePercBalAlertThreshold.cs" />
