Keep your .config clean with external config files Add <appSettings file="appSettings.config">
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40143

--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -104,7 +104,7 @@
     <add name="RetailCDRDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
   </connectionStrings>-->
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="false"/>
     <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
