--- a/Retail/Code/Retail.Web/Retail.Web.csproj
+++ b/Retail/Code/Retail.Web/Retail.Web.csproj
@@ -805,6 +805,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ConnectionStrings.config" />
+    <Content Include="appSettings.config" />
     <None Include="Properties\PublishProfiles\Retail.pubxml" />
     <None Include="Web.config.exclude">
       <SubType>Designer</SubType>
