Add grouping fields to Action Rule + Add Field Title to DA Pof clac output fields
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40150

--- a/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Config\Measure\IMeasureEvaluator.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfigQuery.cs" />
     <Compile Include="DataAnalysis\Common\DARecordAggregate.cs" />
+    <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\DAProfCalcOutputFieldFilter.cs" />
+    <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\DAProfCalcOutputField.cs" />
     <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\IDAProfCalcCalculationEvaluator.cs" />
     <Compile Include="DataAnalysis\Common\TimeRangeFilterConfig.cs" />
     <Compile Include="DataAnalysis\DataAnalysisDefinition\DataAnalysisDefinition.cs" />
