Add web.config and app.config and apply approach that required both local files ConnectionStrings.config and appSettings.config
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40153

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -595,6 +595,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="appSettings.config" />
+    <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\PublishTOneV2.pubxml" />
     <Content Include="Web.config.CloudXPoint.exclude" />
     <None Include="Web.Debug.config">
