--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -101,7 +101,7 @@
   </connectionStrings>-->
 
   <!-- BEGIN CUSTOMER VARYING SECTION -->
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="false"/>
     <add key="BCPTempFilesDirectory"  value="C:\BCPFiles" />
