added RequiredPermissionSet and implemented it in logging
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40155

--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ModuleManager.cs" />
     <Compile Include="OrgChartManager.cs" />
     <Compile Include="EmailContext\PasswordEmailContext.cs" />
+    <Compile Include="RequiredPermissionSetManager.cs" />
     <Compile Include="SecurityContext.cs" />
     <Compile Include="SecurityExtensionMethods.cs" />
     <Compile Include="SystemActionManager.cs" />
