--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="PermissionDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupDataManager.cs" />
+    <Compile Include="RequiredPermissionSetDataManager.cs" />
     <Compile Include="SystemActionDataManager.cs" />
     <Compile Include="TenantDataManager.cs" />
     <Compile Include="UserDataManager.cs" />
