--- a/Vanrise/Code/Vanrise.AccountBalance.Web/Vanrise.AccountBalance.Web.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/Vanrise.AccountBalance.Web.csproj
@@ -184,12 +184,29 @@
     <Content Include="VR_AccountBalance\Directives\AccountBalanceNotification\vr-accountbalance-notification-bodyeditor.js" />
     <Content Include="VR_AccountBalance\Directives\AccountBalanceNotification\vr-accountbalance-notification-searcheditor.js" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\AccountBalanceNotification\vr-accountbalance-notificationtype-settings.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\MainExtensions\BillingTransactionFieldEditorContoller.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\MainExtensions\Templates\BillingTransactionFieldEditor.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\MainExtensions\Templates\BillingTransactionSourceSetting.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\MainExtensions\Templates\LiveBalanceSourceSetting.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\MainExtensions\vr-accountbalance-accounttype-source-billingtransaction.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\MainExtensions\vr-accountbalance-accounttype-source-livebalance.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\Templates\VRAccountTypeGridColumnEditor.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\Templates\VRAccountTypeGridColumns.html" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\Templates\VRAccountTypeSettings.html" />
     <Content Include="VR_AccountBalance\Directives\BillingTransaction\Templates\BillingTransactionGridTemplate.html" />
     <Content Include="VR_AccountBalance\Directives\BillingTransaction\vr-accountbalance-billingtransaction-grid.js" />
     <Content Include="VR_AccountBalance\Directives\LiveBalance\Templates\LiveBalanceTemplate.html" />
     <Content Include="VR_AccountBalance\Directives\LiveBalance\vr-livebalance-currentaccountbalance.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\Templates\VRAccountTypeSourceEditor.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\Templates\VRAccountTypeSources.html" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\vr-accountbalance-accounttype-gridcolumns.js" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\vr-accountbalance-accounttype-settings.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\vr-accountbalance-accounttype-sourcefields-selector.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\vr-accountbalance-accounttype-sources.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\vr-accountbalance-accounttype-sourcesettings.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\vr-accountbalance-accounttype-sources-selector.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\VRAccountTypeGridColumnEditorController.js" />
+    <Content Include="VR_AccountBalance\Directives\MainExtensions\Account\VRAccountTypeSourceEditorController.js" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\BalanceAlertRule\Templates\BalanceAlertRuleSettingsTemplate.html" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\BalanceAlertRule\vr-accountbalance-accountbalancerule-settings.js" />
     <Content Include="VR_AccountBalance\Directives\MainExtensions\BillingTransaction\Templates\BillingTransactionSynchronizer.html" />
@@ -204,6 +221,7 @@
     <Content Include="VR_AccountBalance\Directives\ProcessInput\Normal\vr-accountbalance-updateprocess-manual.js" />
     <Content Include="VR_AccountBalance\Directives\ProcessInput\vr-balancealertchecker-process.js" />
     <Content Include="VR_AccountBalance\Directives\ProcessInput\vr-balancealertthreshold-updateprocess.js" />
+    <Content Include="VR_AccountBalance\Services\AccountTypeService.js" />
     <Content Include="VR_AccountBalance\Services\APIServices\AccountStatementAPIService.js" />
     <Content Include="VR_AccountBalance\Services\APIServices\AccountTypeAPIService.js" />
     <Content Include="VR_AccountBalance\Services\APIServices\AccountUsageAPIService.js" />
