--- a/Vanrise/Code/Vanrise.AccountBalance.Business/Vanrise.AccountBalance.Business.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Business/Vanrise.AccountBalance.Business.csproj
@@ -63,6 +63,9 @@
     <Compile Include="AccountUsageManager.cs" />
     <Compile Include="BillingTransactionTypeManager.cs" />
     <Compile Include="ConfigurationManager.cs" />
+    <Compile Include="Context\AccountBalanceFieldSourceGetFieldDefinitionsContext.cs" />
+    <Compile Include="Context\AccountBalanceFieldSourceGetFieldValueContext.cs" />
+    <Compile Include="Context\AccountBalanceFieldSourcePrepareSourceDataContext.cs" />
     <Compile Include="Context\AccountContext.cs" />
     <Compile Include="Context\AccountInfoContext.cs" />
     <Compile Include="Context\AccountUsagePeriodEvaluationContext.cs" />
