--- a/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Notification/Vanrise.GenericData.Notification.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="DataRecord\DataRecordActionTargetType.cs" />
+    <Compile Include="DataRecord\DataRecordAlertRuleConfig.cs" />
+    <Compile Include="DataRecord\DataRecordAlertRuleManager.cs" />
     <Compile Include="DataRecord\DataRecordNotificationTypeSettings.cs" />
     <Compile Include="DataRecord\DataRecordNotificationTypeSettingsContorller.cs" />
     <Compile Include="DataRecord\DataRecordNotificationTypeSettingsManager.cs" />
@@ -57,6 +59,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common.Business\Vanrise.Common.Business.csproj">
+      <Project>{571a68ec-2d45-4b5c-9e75-bb6fb7c0d7b7}</Project>
+      <Name>Vanrise.Common.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
@@ -81,6 +87,11 @@
       <Project>{c527c7b2-a481-4d1d-b25a-4a540e812153}</Project>
       <Name>Vanrise.Web.Base</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataRecord\Controllers\" />
+    <Folder Include="DataRecord\Entities\" />
+    <Folder Include="DataRecord\Manager\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
