Adding DataRecordField @AccountDetail
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40166

--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -22,7 +22,7 @@
     </exceptionLoggers>
   </vanriseLogging>
 
-  <connectionStrings configSource="ConnectionStrings.config"/>
+  <connectionStrings configSource="ConnectionStrings.config">
     <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Configuration;User ID=development;Password=dev!123;" />
     <add name="RetailDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Retail_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
 
@@ -36,8 +36,8 @@
     <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
 
-    <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
-  </connectionStrings>-->
+    <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />-->
+  </connectionStrings>
 
   <appSettings file="appSettings.config">
     <add key="Web_ExtendedModulesNames" value="Retail_Ringo,Retail_Zajil,Retail_Teles"/><!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
