--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -92,7 +92,7 @@
     <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Initial Catalog=Retail.Ringo_Online_Transaction;User ID=Application_Online_User; Password=Application_Online_User" />
     <add name="MainDBConnString" connectionString=""/>
   </connectionStrings>-->
-  <connectionStrings configSource="ConnectionStrings.config"/>
+  <connectionStrings configSource="ConnectionStrings.config">
     <!--<add name="ConfigurationDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" />
     <add name="RetailDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
     <add name="VR_AccountBalance_TransactionDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
@@ -102,8 +102,9 @@
     <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Queue;User ID=sa; Password=p@ssw0rd" />
     <add name="NumberingPlanDBConnString" connectionString="Server=192.168.110.185;User ID=development;Password=dev!123;Database=Retail_Dev;"/>
     <add name="RetailCDRDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
-    <add name="RetailAnalyticsDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>
-  </connectionStrings>-->
+    <add name="RetailAnalyticsDBConnString" connectionString="Server=.;Database=Retail_Ringo;User ID=sa;Password=p@ssw0rd;"/>-->
+  </connectionStrings>
+  
   <appSettings file="appSettings.config">
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="false"/>
