VRAlertRule New Security and trimming convention implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40167

--- a/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
@@ -49,11 +49,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VRAlertRuleTypeAddOrEditFilter.cs" />
     <Compile Include="Context\VRActionExecutionContext.cs" />
     <Compile Include="Filters\IVRNotificationViewFilter\VRNotificationTypeViewFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VRActionDefinitionManager.cs" />
     <Compile Include="VRActionManager.cs" />
+    <Compile Include="VRActionRuleViewSettings.cs" />
     <Compile Include="VRAlertRuleManager.cs" />
     <Compile Include="VRAlertRuleNotificationManager.cs" />
     <Compile Include="VRAlertRuleTypeManager.cs" />
