--- a/Retail/Code/Retail.Zajil.Entities/Retail.Zajil.Entities.csproj
+++ b/Retail/Code/Retail.Zajil.Entities/Retail.Zajil.Entities.csproj
@@ -44,6 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RDLCInvoiceDetails.cs" />
+    <Compile Include="RDLCInvoiceItemDetails.cs" />
+    <Compile Include="InvoiceDetails.cs" />
+    <Compile Include="InvoiceItemDetails.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
