--- a/Retail/Code/Retail.Zajil.Web/Retail.Zajil.Web.csproj
+++ b/Retail/Code/Retail.Zajil.Web/Retail.Zajil.Web.csproj
@@ -122,6 +122,8 @@
     <Content Include="Retail_Zajil\Directives\MainExtensions\Account\Templates\AccountConvertorEditor.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Payment\retail-zajil-payment-convertor-editor.js" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Payment\Templates\PaymentConvertorEditor.html" />
+    <Content Include="Retail_Zajil\Directives\MainExtensions\ZajilInvoiceSettings\retail-invoice-invoicetype-zajilsubscriberinvoicesettings.js" />
+    <Content Include="Retail_Zajil\Directives\MainExtensions\ZajilInvoiceSettings\Templates\ZajilnvoiceSettingsTemplate.html" />
     <Content Include="Retail_Zajil\Reports\Reporting.aspx" />
     <Content Include="Retail_Zajil\Services\OrderDetailService.js" />
     <Content Include="Retail_Zajil\Views\OrderDetail\OrderDetailEditor.html" />
